crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__cold.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool true of
  True -> 42
  False -> case@Tag constr 0 (trace "cold" in error) of
    0 ignored#1 -> 0
--- unoptimized UPLC
(program 1.1.0
  (case
    (con bool True)
    (case
      (constr 0
        (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))
      (lam ignored_1 (con integer 0)))
    (con integer 42)))
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
case@Bool true of
  True -> 42
  False -> case@Tag constr 0 (trace "cold" in error) of
    0 ignored#1 -> 0
--- uplc before
(program 1.1.0
  (case
    (con bool True)
    (case
      (constr 0
        (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))
      (lam ignored_1 (con integer 0)))
    (con integer 42)))
--- core after
case@Bool true of
  True -> 42
  False -> let ignored#1 : int = trace "cold" in error in
  0
--- uplc after
(program 1.1.0
  (case
    (con bool True)
    [(lam ignored_1 (con integer 0))
      (force [[(force (builtin trace)) (con string "cold")] (delay (error))])]
    (con integer 42)))
--- result
(con integer 42)
--- logs
[]
