crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__effectful_subject.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag (trace "subject" in constr 0) of
  0 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (force [[(force (builtin trace)) (con string "subject")] (delay (constr 0))])
    (con integer 42)))
--- optimized Core
let anf#1 : @constr[0]() = trace "subject" in constr 0 in
case@Tag anf#1 of
  0 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_2 (case anf_2 (con integer 42)))
      (force [[builtin_3 (con string "subject")] (delay (constr 0))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Tag (trace "subject" in constr 0) of
  0 -> 42
--- uplc before
(program 1.1.0
  (case
    (force [[(force (builtin trace)) (con string "subject")] (delay (constr 0))])
    (con integer 42)))
--- core after
case@Tag (trace "subject" in constr 0) of
  0 -> 42
--- uplc after
(program 1.1.0
  (case
    (force [[(force (builtin trace)) (con string "subject")] (delay (constr 0))])
    (con integer 42)))
--- result
(con integer 42)
--- logs
["subject"]
