crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__nullary.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 0 of
  0 -> 42
  1 ignored#1 -> 42
  2 ignored#2 ignored#3 -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (constr 0)
    (con integer 42)
    (lam ignored_1 (con integer 42))
    (lam ignored_2 (lam ignored_3 (con integer 42)))))
--- optimized Core
let anf#7 : @constr[0]() = constr 0 in
case@Tag anf#7 of
  0 -> 42
  1 ignored#4 -> 42
  2 ignored#5 ignored#6 -> 42
--- optimized UPLC
(program 1.1.0
  [(lam anf_1
    (case
      anf_1
      (con integer 42)
      (lam ignored_2 (con integer 42))
      (lam ignored_3 (lam ignored_8 (con integer 42)))))
    (constr 0)])
--- isolated pass
--- core before
case@Tag constr 0 of
  0 -> 42
  1 ignored#1 -> 42
  2 ignored#2 ignored#3 -> 42
--- uplc before
(program 1.1.0
  (case
    (constr 0)
    (con integer 42)
    (lam ignored_1 (con integer 42))
    (lam ignored_2 (lam ignored_3 (con integer 42)))))
--- core after
42
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
