crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_constr__returned_function.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_constr.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
(case@Tag constr 0 (trace "field" in 42) of
  0 x#1 -> \p#2 : int -> trace "body" in x#1) (trace "argument" in 0)
--- unoptimized UPLC
(program 1.1.0
  [(case
    (constr 0
      (force
        [[(force (builtin trace)) (con string "field")] (delay (con integer 42))]))
    (lam x_1
      (lam p_2 (force [[(force (builtin trace)) (con string "body")] (delay x_1)]))))
    (force
      [[(force (builtin trace)) (con string "argument")] (delay (con integer 0))])])
--- optimized Core
let x#3 : int = trace "field" in 42 in
let anf#5 : int = trace "argument" in 0 in
trace "body" in x#3
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam x_1
      [(lam anf_2 (force [[builtin_3 (con string "body")] (delay x_1)]))
        (force [[builtin_3 (con string "argument")] (delay (con integer 0))])])
      (force [[builtin_3 (con string "field")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- core before
(case@Tag constr 0 (trace "field" in 42) of
  0 x#1 -> \p#2 : int -> trace "body" in x#1) (trace "argument" in 0)
--- uplc before
(program 1.1.0
  [(case
    (constr 0
      (force
        [[(force (builtin trace)) (con string "field")] (delay (con integer 42))]))
    (lam x_1
      (lam p_2 (force [[(force (builtin trace)) (con string "body")] (delay x_1)]))))
    (force
      [[(force (builtin trace)) (con string "argument")] (delay (con integer 0))])])
--- core after
(let x#1 : int = trace "field" in 42 in
\p#2 : int -> trace "body" in x#1) (trace "argument" in 0)
--- uplc after
(program 1.1.0
  [[(lam x_1
    (lam p_2 (force [[(force (builtin trace)) (con string "body")] (delay x_1)])))
    (force
      [[(force (builtin trace)) (con string "field")] (delay (con integer 42))])]
    (force
      [[(force (builtin trace)) (con string "argument")] (delay (con integer 0))])])
--- result
(con integer 42)
--- logs
["field", "argument", "body"]
